# Neraul-Radiance-Cache

./: .gitignore  .gitmodules  CMakeLists.txt  setup_vs2022.bat
Source/Falcor/: CMakeLists.txt
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/MinimalPathTracer/: MinimalPathTracer.rt.slang
Source/RenderPasses/ReSTIRDI/: CMakeLists.txt  Composite.cs.slang  DataStructures.slang  FinalShading.cs.slang  LoadShadingData.slang  NRC.cpp  NRC.h  NRC.slang  Network.cu  Network.h  PathTracer.rt.slang  PrepareSurfaceData.cs.slang  ReSTIRDI.cpp  ReSTIRDI.h
Source/RenderPasses/ReSTIRDI/config/: netConfig.json
scripts/: ReSTIRDI.py  miniPathVSReSTIR.py  split.py
tools/fixThirdParty/: fixTinyCudaNN.txt
